added more styling

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ background-color: rgb(219, 43, 12);
 
 } */
 
-
+/* 
 .gifs{
   width:10%;
   float: right;
@@ -64,7 +64,7 @@ background-color: rgb(219, 43, 12);
 
 }
 
-
+*/
 
 footer{
 padding: 50px;
@@ -75,4 +75,4 @@ bottom: 0;
 
 
 
-} 
+}  
